[package]
name = "compiler"
version = "0.3.2"
edition = "2021"

# The generated code depends on lalrpop-util.
[dependencies]
koopa = "0.0.7"
lalrpop-util = { version = "0.22.0", features = ["lexer"] }

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.22.0"
# If you are supplying your own external lexer you can disable default features so that the
# built-in lexer feature is not included
# lalrpop = { version = "0.22.0", default-features = false }

